--- a/evolution/evolution.html
+++ b/evolution/evolution.html
@@ -9,16 +9,18 @@
         border: 1px solid black;
       }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   </head>
 
   <body>
-    <canvas id="living-space" width="400" height="400"></canvas>
-    <canvas id="graph" width="400" height="400"></canvas><br>
+    <canvas id="living-space" width="400" height="400"></canvas><br>
+    <canvas id="populationChart" style="width:100%;max-width:400px;"></canvas><br>
+    <canvas id="attributesChart" style="width:100%;max-width:400px;"></canvas><br>
 
-    N:<input size="15px" type="number" id="N" name="N" placeholder="10">
+    N:<input size="15px" type="number" id="N" name="N" placeholder="1">
     FOOD:<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br>
     <b>STARTING ATTRIBUTES:</b><br>
-    ENERGY:<input size="15px" type="number" id="ENERGY" name="ENERGY" placeholder="10000"><br>
+    ENERGY:<input size="15px" type="number" id="ENERGY" name="ENERGY" placeholder="100"><br>
     VELOCITY:<input size="15px" type="number" id="VELOCITY" name="VELOCITY" placeholder="50"><br>
     SIZE:<input size="15px" type="number" id="SIZE" name="SIZE" placeholder="30"><br>
     SENSE:<input size="15px" type="number" id="SENSE" name="SENSE" placeholder="0"><br>
