--- a/life_simulation/life_simulation.html
+++ b/life_simulation/life_simulation.html
@@ -21,7 +21,8 @@
     TERRAIN:<input size="15px" type="number" id="TERRAIN" name="TERRAIN" placeholder="1">
     FOOD:<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br>
     <b>STARTING ATTRIBUTES:</b><br>
-    ENERGY:<input size="15px" type="number" id="ENERGY" name="ENERGY" placeholder="100"><br>
+    HUNGER:<input size="15px" type="number" id="HUNGER" name="HUNGER" placeholder="100"><br>
+    THIRST:<input size="15px" type="number" id="THIRST" name="THIRST" placeholder="100"><br>
     VELOCITY:<input size="15px" type="number" id="VELOCITY" name="VELOCITY" placeholder="50"><br>
     SIZE:<input size="15px" type="number" id="SIZE" name="SIZE" placeholder="30"><br>
     SENSE:<input size="15px" type="number" id="SENSE" name="SENSE" placeholder="0"><br>
