Finished life simulation.

--- a/life_simulation/life_simulation.html
+++ b/life_simulation/life_simulation.html
@@ -17,6 +17,7 @@
     <canvas id="populationChart" style="width:100%;max-width:400px;"></canvas><br>
     <canvas id="attributesChart" style="width:100%;max-width:400px;"></canvas><br>
 
+    <b>SETUP PARAMETERS:</b><br>
     N:<input size="15px" type="number" id="N" name="N" placeholder="1">
     TERRAIN:<input size="15px" type="number" id="TERRAIN" name="TERRAIN" placeholder="1">
     FOOD:<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br>
