--- a/life_simulation/life_simulation.html
+++ b/life_simulation/life_simulation.html
@@ -18,17 +18,18 @@
     <canvas id="attributesChart" style="width:100%;max-width:400px;"></canvas><br>
 
     <b>SETUP PARAMETERS:</b><br>
-    N:<input size="15px" type="number" id="N" name="N" placeholder="1">
-    TERRAIN:<input size="15px" type="number" id="TERRAIN" name="TERRAIN" placeholder="1">
-    FOOD:<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br>
+    NUMBER OF STARTING CREATURES:<input size="15px" type="number" id="N" name="N" placeholder="1"><br>
+    TERRAIN TYPE:<input size="15px" type="number" id="TERRAIN" name="TERRAIN" placeholder="1"><br>
+    NUMBER OF FOOD (GENERATION):<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br><br>
+    
     <b>STARTING ATTRIBUTES:</b><br>
-    HUNGER:<input size="15px" type="number" id="HUNGER" name="HUNGER" placeholder="100"><br>
-    THIRST:<input size="15px" type="number" id="THIRST" name="THIRST" placeholder="100"><br>
-    VELOCITY:<input size="15px" type="number" id="VELOCITY" name="VELOCITY" placeholder="50"><br>
-    SIZE:<input size="15px" type="number" id="SIZE" name="SIZE" placeholder="30"><br>
-    SENSE:<input size="15px" type="number" id="SENSE" name="SENSE" placeholder="0"><br>
+    INITIAL HUNGER:<input size="15px" type="number" id="HUNGER" name="HUNGER" placeholder="100"><br>
+    INITIAL THIRST:<input size="15px" type="number" id="THIRST" name="THIRST" placeholder="100"><br>
+    INITIAL VELOCITY:<input size="15px" type="number" id="VELOCITY" name="VELOCITY" placeholder="50"><br>
+    INITIAL SIZE:<input size="15px" type="number" id="SIZE" name="SIZE" placeholder="30"><br>
+    INITIAL SENSE:<input size="15px" type="number" id="SENSE" name="SENSE" placeholder="0"><br>
 
-    <input id="startButton" type="button" value="Start" onclick="start();" />
+    <input id="startButton" type="button" value="Start simulation" onclick="start();" />
     <input id="clearButton" type="button" value="Clear" onclick="clearAll();" />
 
     <script src="life_simulation.js"></script>
