life_simulation2.0 finished.

--- a/life_simulation2.0/life_simulation2.0.html
+++ b/life_simulation2.0/life_simulation2.0.html
@@ -20,7 +20,8 @@
     <b>SETUP PARAMETERS:</b><br>
     NUMBER OF STARTING CREATURES:<input size="15px" type="number" id="N" name="N" placeholder="1"><br>
     TERRAIN TYPE:<input size="15px" type="number" id="TERRAIN" name="TERRAIN" placeholder="1"><br>
-    NUMBER OF FOOD (GENERATION):<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br><br>
+    NUMBER OF FOOD (GENERATION):<input size="15px" type="number" id="FOOD" name="FOOD" placeholder="30"><br>
+    NUMBER OF PLANTS (GENERATION):<input size="15px" type="number" id="PLANTS" name="PLANTS" placeholder="10"><br><br>
     
     <b>STARTING ATTRIBUTES:</b><br>
     INITIAL HUNGER:<input size="15px" type="number" id="HUNGER" name="HUNGER" placeholder="100"><br>
